# IOT-FARM

./: README.md
IOT FARM HARDWARE/IOTFARM/: IOTFARM.brd  IOTFARM.kicad_sch  IOTFARM.sch
IOT FARM SOFTWARE/IOT FIMWARE/Blink/: Blink.ino
IOT FARM SOFTWARE/IOT FIMWARE/Blink2/: Blink2.ino
IOT FARM SOFTWARE/IOT FIMWARE/Blink3/: Blink3.ino
IOT FARM SOFTWARE/IOT FIMWARE/Esp32/: Esp32.ino
IOT FARM SOFTWARE/MASTER/: CMakeLists.txt  ReadMe.md  Wire.cpp  Wire.h  blink.cpp  blinkesp32.cpp
IOT FARM SOFTWARE/NODE/: Makefile  avr-gcc-toolchain.cmake  blink.cpp
IOT FARM SOFTWARE/NODE/Utility/: twi.c
IOT FARM SOFTWARE/mastertwo/Blink/: Blink.ino
IOT FARM SOFTWARE/mastertwo/Esp32/: Esp32.ino  html.HTML
